# lsg

./: .gitignore  .gitmodules  AHAHAHAHAHAHAH  CURVE-ALGORITHMS.md  Cargo.toml  EXAMPLE.md  INSTANCES.md  README.md  TODOS.md  deps.txt  helper.py
common/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/desktop/: CHECKLIST.md  Cargo.toml  README.md
crates/desktop/src/: linux.rs  shared.rs
crates/desktop/src/linux/: dbus.rs  signals.rs  wayland.rs
crates/egl/: Cargo.toml  README.md
crates/egl/src/: lib.rs
crates/framework/: Cargo.toml
crates/framework/src/: lib.rs  test.rs
crates/framework/src/test/: app.rs  atlas.rs  interactive.rs  svgs.rs
crates/gl/: Cargo.toml  README.md
crates/gl/src/: lib.rs
crates/render/: Cargo.toml  README.md
crates/render/src/: egl.rs  gl.rs  lib.rs  shaper.rs
crates/render/src/shader/: composite.vert  curve.frag  curve.vert
crates/text/: Cargo.toml
crates/text/src/: shaper.rs
crates/widget/: Cargo.toml
crates/widget/src/: svg.rs
crates/xtask/: Cargo.toml
desktop/: BEZIER.txt  Cargo.toml  TODO.md
desktop/src/: lib.rs  linux.rs  platform.rs  shared.rs  test.rs  test2.rs  wayland.rs  window.rs
desktop/src/linux/: dbus.rs  egl.rs  wayland.rs
desktop/src/platform/: dbus.rs  wayland.rs
desktop/src/wayland/: dbus.rs  window.rs
docs/: README.md  THOUGHTS.md
egl/: Cargo.toml
egl/src/: lib.rs
gl/: Cargo.toml
gl/src/: lib.rs
lsg-core/: Cargo.toml
lsg-core/src/: lib.rs
lsg-desktop/: Cargo.toml  TODO.md  build.rs
lsg-desktop/src/: lib.rs  platform.rs  test.rs  wayland.rs  window.rs
lsg-desktop/src/platform/: dbus.rs  wayland.rs
lsg-gl/: Cargo.toml
lsg-gl/src/: lib.rs
lsg-window/: Cargo.toml  TODO.md
lsg-window/src/: lib.rs  test.rs  wayland.rs
lsg-winit/: Cargo.toml  README.md
lsg-winit/src/: lib.rs  test.rs
render/: Cargo.toml
render/src/: delauney.rs  egl.rs  lib.rs  shaper.rs  shared.rs  svg.rs  transform.rs  triangulate.rs
render/src/shader/: basic.frag  basic.vert  composite.frag  composite.vert  curve.frag  curve.vert
src/: lib.rs  test.rs
src/test/: app.rs  frag.glsl  glutin.rs  main.rs  shader.wgsl  vert.glsl  wgpu.rs
text/: Cargo.toml
text/src/: lib.rs  shaper.rs
widget/: Cargo.toml
widget/src/: lib.rs  svg.rs
