
[package]
name = "lsg"
description = "light and small gui apps"
edition = "2024"

[workspace]
members = [ "common","desktop", "egl", "gl", "render", "text", "widget", "xtask"]
package.version = "0.1.0"
package.edition = "2024"
package.authors = ["foxcirc"]

# [[test]]
# name = "app"
# path = "src/test/app.rs"
# harness = false
# edition = "2021" # the default seems to be 2015

[dependencies]
common  = { path = "common"  }
desktop = { path = "desktop" }
render  = { path = "render"  }
widget  = { path = "widget"  }

[dev-dependencies]
async-executor = "1.8.0"
futures-lite = "2.2.0"
