
[workspace]
resolver = "3" # use the cutting-edge resolver tech
members = [
    "crates/framework",
    "crates/common",
    "crates/desktop",
    "crates/egl",
    "crates/gl",
    "crates/render",
    "crates/text",
    "crates/widget",
    "crates/xtask",
]

[workspace.package]
version = "0.1.0"
authors = ["foxcirc"]
edition = "2024"
