[package]
name = "desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[test]]
name = "test"
path = "src/test.rs"
harness = false
edition = "2021" # why is 2015 the default?

[[test]]
name = "test2"
path = "src/test2.rs"
harness = false
edition = "2021" # why is 2015 the default?

[features]
default = ["signals"]
signals = ["async-signals"]

[dependencies]

common = { path = "../common" }
egl = { path = "../egl" } # TODO: make an internal feature that enables this integration only for lsg, so this dependency isn't forced on users

# tracing
tracing = "0.1.40"

# wayland deps
wayland-client = "0.31.2"
wayland-protocols = { version = "0.31.2", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client", "wayland-client"] }
xkbcommon = { version = "0.7.0", features = ["wayland"]}

# other
nix = { version = "0.28.0", features = ["signal", "fs", "user"] }
bitflags = { version = "2.5.0", features = ["std"] }
bv = "0.11.1" # bitvecs

# async/futures deps
futures-lite = "2.3.0"
async-io = "2.3.2"
async-channel = "2.3.1"
async-signals = { version = "0.4.0", optional = true }

[dev-dependencies]

# tracing
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi"] }

gl = { path = "../gl" } # TODO: remove?
render = { path = "../render" }

