[package]
name = "lsg-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[test]]
name = "window"
path = "src/test.rs"
harness = false
edition = "2021" # why is 2015 the default?

[features]
default = ["window", "signals", "environment", "xdp"]
window = []
signals = []
environment = []
xdp = []

[dependencies]
wayland-client = "0.31.2"
wayland-protocols = { version = "0.31.2", features = ["client"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client", "wayland-client"] }
wayland-egl = "0.32.0"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
xkbcommon = { version = "0.7.0", features = ["wayland"]}
nix = { version = "0.28.0", features = ["event", "signal", "time", "poll", "fs"] } # TODO: remove unused features / remove completely
bitflags = { version = "2.5.0", features = ["std"] }
bv = "0.11.1" # bitvec's
futures-lite = "2.3.0"
flume = "0.11.0"
async-io = "2.3.2"
async-signals = "0.4.0"

[dev-dependencies]
lsg-gl = { path = "../lsg-gl" }
