[package]
name = "lsg-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[test]]
name = "window"
path = "src/test.rs"
harness = false
edition = "2021" # why is 2015 the default?

[features]
default = ["window", "signals", "environment", "xdp"]
window = []
signals = []
environment = []
xdp = []

[dependencies]

# egl
khronos-egl = { version = "6.0.0", features = ["dynamic"] }

# wayland deps
wayland-client = "0.31.2"
wayland-protocols = { version = "0.31.2", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client", "wayland-client"] }
wayland-egl = "0.32.0"
xkbcommon = { version = "0.7.0", features = ["wayland"]}
nix = { version = "0.28.0", features = ["signal", "fs"] }
bitflags = { version = "2.5.0", features = ["std"] }
bv = "0.11.1" # bitvecs

# async/futures deps
futures-lite = "2.3.0"
flume = "0.11.0" # todo: use async-channel
async-io = "2.3.2"
async-signals = "0.4.0"
async-lock = "3.3.0"

[dev-dependencies]

# for testing the windowing portion of lsg-desktop
lsg-gl = { path = "../lsg-gl" }

[build-dependencies]

# for building basu
cc = "1.0.96"
