[package]
name = "lsg-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[test]]
name = "window"
path = "src/test.rs"
harness = false
edition = "2021" # why is 2015 the default?

[features]
default = ["signals"]
signals = ["async-signals"]

[dependencies]

# tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "fmt"] }

# egl
khronos-egl = { version = "6.0.0", features = ["dynamic"] }

# wayland deps
wayland-client = "0.31.2"
wayland-protocols = { version = "0.31.2", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client", "wayland-client"] }
wayland-egl = "0.32.0"
xkbcommon = { version = "0.7.0", features = ["wayland"]}

# other
nix = { version = "0.28.0", features = ["signal", "fs"] }
bitflags = { version = "2.5.0", features = ["std"] }
bv = "0.11.1" # bitvecs

# async/futures deps
futures-lite = "2.3.0"
async-io = "2.3.2"
async-lock = "3.3.0"
async-channel = "2.3.1"
async-broadcast = "0.7.0"
async-signals = { version = "0.4.0", optional = true }

[dev-dependencies]

# for testing the windowing portion of lsg-desktop
lsg-gl = { path = "../lsg-gl" }
