[package]
name = "lsg-window"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[test]]
name = "window"
path = "src/test.rs"
harness = false
edition = "2021" # why is 2015 the default?


[dependencies]
wayland-client = "0.31.2"
wayland-protocols = { version = "0.31.2", features = ["client"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client", "wayland-client"] }
wayland-egl = "0.32.0"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
xkbcommon = { version = "0.7.0", features = ["wayland"]}
nix = { version = "0.28.0", features = ["event", "signal", "time", "poll", "fs"] }
# rustix = { version = "0.38.31", features = ["event"] }
# libc = "0.2.153" # TODO: Maybe I can remove this dep and just use rustix in the future but this version of rustix is bugged
# timerfd = "1.6.0"

[dev-dependencies]
lsg-gl = { path = "../lsg-gl" }
anyhow = "*"
