[package]
name = "lsg-winit"
description = "async winit wrapper for lsg"
keywords = ["async", "winit"]
edition.workspace = true
version.workspace = true
authors.workspace = true

[[test]]
name = "test"
path = "src/test.rs"
harness = false
edition = "2021"

[dev-dependencies]
async-executor = "1.8.0"
futures-lite = "2.2.0"

[dependencies]
flume = "0.11.*"
oneshot = "0.1.*"

[dependencies.winit]
version = "0.29.*"
default-features = false
features = ["rwh_06", "wayland"] # NOTE: glutin uses rwh_05, wgpu uses rwh_06
