[package]
name = "render"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# lsg-family dependencies
common = { path = "../common" }
egl = { path = "../egl" }
gl = { path = "../gl" }
tracing = "0.1.40" # TODO: use tracing.workspace = true
# bitvecs
bv = "0.11.1"
