
[package]
name = "lsg"
description = "light and small gui apps"

version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]

common = { path = "../common" }
desktop = { path = "../desktop" }
egl = { path = "../egl" }
gl = { path = "../gl" }
render = { path = "../render" }
text = { path = "../text" }
widget = { path = "../widget" }

futures-lite = "2.6.1"
async-executor = "1.13.3"
