[package]
name = "text"

version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
# font rendering
swash = { version = "0.2.0", default-features = false, features = ["std"] }
skrifa = { version = "0.27.0", default-features = false, features = ["std"] }
